--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,10 @@ runs:
       id: inputs
     - run: sudo chown -R 1000:1000 ${{ steps.inputs.outputs.artifacts_dir }} ${{ steps.inputs.outputs.repo_dir }}
       shell: bash
-    - run: docker build --build-arg CONTAINER --build-arg ARCH -t imagebuilder $GITHUB_ACTION_PATH
+    - run: |
+        echo "::group::  docker build -t imagebuilder $GITHUB_ACTION_PATH"
+        docker build --build-arg CONTAINER --build-arg ARCH -t imagebuilder $GITHUB_ACTION_PATH
+        echo "::endgroup::"
       shell: bash
     - run: |
         docker run --rm \
@@ -32,5 +35,7 @@ runs:
       shell: bash
     - run: sudo chown -R --reference=${{ steps.inputs.outputs.artifacts_dir }}/.. ${{ steps.inputs.outputs.artifacts_dir }}
       shell: bash
+      if: always()
     - run: sudo chown -R --reference=${{ steps.inputs.outputs.repo_dir }}/.. ${{ steps.inputs.outputs.repo_dir }}
       shell: bash
+      if: always()
